# labyrinth

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: augmentations.ipynb  color_generators.py
scripts/: cvat_generate_samples.py  cvat_process_sprites.py  generate_mask.py  generate_samples.py  synetic_generate_samples.py  synetic_process_sprites.py
src/labyrinth/: __init__.py
src/labyrinth/augmentations/: __init__.py  methods.py  protocol.py
src/labyrinth/backgrounds/: __init__.py  background_generators.py  background_samplers.py  color_generators.py  color_samplers.py  get_generator.py  models.py  protocol.py
src/labyrinth/data_models/: annotations.py  bounding_boxes.py  coco.py  media.py  yolo.py
src/labyrinth/modifiers/: __init__.py  methods.py  protocol.py
src/labyrinth/sample_generators/: object_detection.py  protocol.py  pytorch.py
src/labyrinth/targets/sprite/: __init__.py  get_sampler.py  models.py  protocol.py  sprite_placer.py  sprite_sampler.py
src/labyrinth/types/: __init__.py  array.py  color_space.py  images.py  ranges.py  samples.py  shapes.py
src/labyrinth/utils/: __init__.py  exceptions.py  general.py  loaders.py  multiprocessing.py  sprite.py
tests/: test_color_generators.py
