[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labyrinth"
version = "0.1.0"
description = "Synthetic data generation."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fire>=0.7.0",
    "numpy>=2.2.4",
    "orjson>=3.10.16",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "tqdm>=4.67.1"
]


[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]

[tool.ruff]
src = [ "src" ]

[tool.ruff.lint]
preview = true
select = [
    "E4",       # Import rules
    "E7",       # Statement rules
    "E9",       # Runtime rules
    "F",        # All Pyflakes rules
    "B006",     # mutable-argument-default: Do not use mutable data structures for argument defaults
    "B008",     # function-call-in-default-argument: Do not perform function call {name} in argument defaults;
    "PIE790",   # unnecessary-placeholder: Unnecessary pass statement
    "S303",     # suspicious-insecure-hash-usage: Use of insecure MD2, MD4, MD5, or SHA1 hash function
    "S324",     # hashlib-insecure-hash-function: Probable use of insecure hash functions in {library}: {string}
    "I",        # All isort rules
    "D",        # All pydocstyle rules
]
ignore = [
    "D1",       # Don't enforce existence of docstrings
]
extend-unsafe-fixes = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.py",
]

exclude = [
  "*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/labyrinth",
]
